fix(members): remove button on small screens

--- a/src/styles/partials/common.less
+++ b/src/styles/partials/common.less
@@ -307,6 +307,15 @@ p {
 
 			&.extend {
 				max-height: 2000px;
+
+				& + a {
+
+					& + a.button.apply {
+						top: 97%;
+						-webkit-transition: all 0.6s ease-in;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+						transition: all 0.6s ease-in;
+					}
+				}
 			}
 
 			ul {
